tests/ui/editions/diverging-block.e2024.stderr
error[E0308]: mismatched types
  --> $DIR/diverging-block.rs:18:18
   |
LL |       let _: u32 = {
   |  __________________^
LL | |         return;
   | |               - help: remove this semicolon to return this value
LL | |     };
   | |_____^ expected `u32`, found `()`

error[E0308]: `if` and `else` have incompatible types
  --> $DIR/diverging-block.rs:28:9
   |
LL | /     if true {
LL | |         return;
   | |         -------
   | |         |     |
   | |         |     help: consider removing this semicolon
   | |         expected because of this
LL | |     } else {
LL | |         0_u32
   | |         ^^^^^ expected `()`, found `u32`
LL | |     };
   | |_____- `if` and `else` have incompatible types

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
